# sub-pilot

./: .gitignore  .npmrc  AGENTS.md  CONTEXT.md  README.md  SubtitleFlow_PRD.md  eslint.config.js  index.html  package-lock.json  package.json  skills-lock.json  tickets.md
.github/workflows/: ci.yml  release.yml
.scratch/release-cicd/issues/: 01-bundle-whisper-runtime.md  02-windows-linux-resource-adaptation.md  03-code-signing-and-notarization.md
.scratch/sub-pilot-mvp/: PRD.md
.scratch/subtitleflow-mvp/: PRD.md
docs/adr/: 0001-whisper-cpp-transcription-engine.md  0002-dependency-delivery-strategy.md  0003-project-directory-persistence.md  0004-subtitle-validation-rules.md  0005-openai-whisper-transcription-engine.md
docs/agents/: domain.md  triage-labels.md
resources/ffmpeg/: .gitkeep
resources/models/: .gitkeep
resources/whisper/: whisper
scripts/: setup-resources.sh  whisper-entry.py
scripts/checks/: windows-release-runtime.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  download.rs  export.rs  lib.rs  main.rs  media.rs  models.rs  project.rs  recent.rs  selfcheck.rs  subtitle.rs  transcribe.rs  whisper.rs
src/components/: ModelPicker.tsx  RecentProjects.tsx  ResultView.tsx
src/lib/: api.ts  clipboard.ts  utils.ts
